--- a/.babelrc
+++ b/.babelrc
@@ -6,9 +6,7 @@
   ],
   "env": {
     "development": {
-      "plugins": [
-        "react-hot-loader/babel"
-      ]
+      "plugins": ["react-hot-loader/babel"]
     },
     "production": {
       "plugins": []
